    * Filesystem can mount directory to root
    * Fixed last_updated value for nested files
    * Added LOAD/UNLOAD filament constants
    * Added TransferInfo class and TransferType contants
    * Changed DOWNLOAD constants to TRANSFER
    * Download object replaced by Transfer object
    * Refactor of Transfer object, added reset method

0.5.0
    * FILE_CHANGED event sends free_space
    * Fix metadata parsing being slow (works for supported files)
    * Metadata parsing is not loading the whole gcode file into RAM anymore
    * Added additional network info
    * Implement DOWNLOAD, DOWNLOAD_INFO and DOWNLOAD_STOP command
    * checked state flag support
    * Error states iteration support
    * Added m_timestamp to file attributes
    * Command classes store both args and kwargs.
    * `max_retries` can be passed to Printer
    * Command handlers use kwargs.

0.4.0 (2021-03-30)
    * new CONNECTION_TIOMEOUT constant set to 30s
    * better Event repr
    * estimated_to_seconds do not need seconds

0.3.0 (2021-03-22)
    * fix update file structure
    * add commands DELETE_FILE,DELETE_DIRECTORY,CREATE_DIRECTORY
    * add error.ErrorState - chained error state infrastructure
    * rename metadata.*filaname to metadata.*path where appropriate
    * check gcode extensions ".gcode", ".gc", ".g", ".gco" for FDM
    * bugfix: don't fail on extracting metadata from non-existing files
    * introduce basic ErrorState instances in errors.py and use in __init__.py
    * introduce errors.TOKEN signaling if a token is available
    * add ironing to FDM metadata
    * introduce `File.size` as a settable property
    * added functions for save/load cache of data
    * fix event data structure
    * new STOPPED state
    * typed package
    * load() function and test_metadata modification
    * cache file name modification
    * if metadata are empty, cache is not created
    * No notification handler
    * No communication without token